[tool.poetry]
name = "htsprophet"
version = "0.1.0"
description = ""
authors = ["Luca Cambiaghi <luca.cambiaghi@maersk.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# poetry run pip install htsprophet

ptvsd = "^4.3.2"
pyarrow = "^0.16.0"
ipython = "^7.13.0"
scipy = "^1.4.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
